fix: centre align snake color at top

--- a/client/src/pages/game/entry.css
+++ b/client/src/pages/game/entry.css
@@ -7,5 +7,12 @@ canvas {
   right: 0;
   left: 0;
   bottom: 0;
+}
 
+.fix {
+  display: grid;
+  width: 100%;
+  height: 100%;
+
+  justify-items: center;
 }
